# aivarize-geo-score

./: .coverage  LICENSE  README.md  pyproject.toml
docs/: Aivarize_GEO_Scoring_Index_White_Paper_v1.0.md
src/aivarize_geo_score/: __init__.py  benchmarks.py  calibration.py  industry_detector.py  score_calculator.py
src/aivarize_geo_score.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/aivarize_geo_score/data/: benchmarks.json
tests/: conftest.py  test_benchmarks.py  test_calibration.py  test_industry_detector.py  test_score_calculation.py
